--- a/responsividade.css
+++ b/responsividade.css
@@ -10,6 +10,17 @@
     .div-1-main-1 {
         padding-left: 20px;
         margin: 0 auto;
+        padding-top: 30px;
+    }
+
+    .section-1 {
+        display: flex;
+        width: 100%;
+    }
+
+    .video iframe {
+        height: 100%;
+        min-height: 250px;
     }
 
     .div-1-main-3,
@@ -82,34 +93,57 @@
         align-content: center;
         justify-content: center;
     }
+    .div-2-main-9 p{
+        text-align: center;
+        padding-top: 10px;
+    }
+    .div-p-e-img{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+    .imagem-computador{
+        max-width: 300px;
+        max-height: 300px;
+    }
+}
+@media (max-width:934px) {
+    .main-9 { 
+    background-color: black;
+    background-image: none;
+}
+    .div-1-main-9, .div-2-main-9{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center; 
+        margin: 0 auto;
+        text-align: center;
+    }
+    .div-2-main-9 p{
+        text-align: center;
+        padding-top: 10px;
+    }
+    .div-3-main-11, .div-1-main-11{
+        display: grid;
+        grid-template-columns: 1fr;
+        align-items: center;
+        justify-items: center;
+       padding: 20px;
+    }
+    .imagem-garantia{
+        width: 300px;
+        height: 300px;
+    }
+
 }
 
 @media (max-width: 500px) {
+
     .div-3-main-6,
     .div-3-main-6-ultimo {
         grid-template-columns: 1fr;
     }
 }
 
-@media (max-width: 1796px) {
-     .div-1-main-1 {
-        padding-left: 20px;
-        margin: 0 auto;
-    }
-    .div-2-main-1,
-    .div-3-main-1,
-    .div-3-main-1 button,
-    .div-4-main-1 {
-        margin-left: 20px;
-        width: 90%;
-    }
-    .div-3-main-1 button{
-        margin-left: 10px;
-    }
-    .div-2-main-6 p:last-child, 
-    .div-1-main-7 p:last-child, 
-    .div-1-main-8 p:last-child{
-        padding: 5px;
-        margin: 0px;
-    }
-}
